Fix spacing for elements

--- a/src/components/InventoryCard/InventoryCard.scss
+++ b/src/components/InventoryCard/InventoryCard.scss
@@ -51,6 +51,12 @@
 
     }
 
+    &__info-span{
+        color: #2E66E5;
+        display: flex;
+        align-items: flex-start;
+    }
+
     &__info-right {
         display: flex;
         flex-direction: column;
@@ -64,7 +70,7 @@
             justify-content: space-between;
         }
     }
-
+ 
     &__info-wrap {
         display: flex;
         flex-direction: column;
@@ -186,9 +192,11 @@
     &__btn {
         width: 1.5rem;
         height: 1.5rem;
+        margin-right: .5rem;
+        cursor:pointer;
 
         @include tablet {
-            margin-top: -1rem;
+            // margin-top: -1rem;
         }
 
     }
@@ -207,6 +215,12 @@
         display: flex;
         justify-content: space-between;
         font-size: .8rem;
+    }
+
+    &-span{
+        color: #2E66E5;
+        display: flex;
+        align-items: flex-start;
     }
 
     &-wrap {
