--- a/src/pages/EditInventory/EditInventory.scss
+++ b/src/pages/EditInventory/EditInventory.scss
@@ -6,12 +6,13 @@
     display:flex;
     flex-direction: column;
     margin-top: -5rem;
-    margin-left: 1rem;
-    margin-right: 1rem;
+    margin-left: 5rem;
+    margin-right: 5rem;
     background-color: $white;
     border-radius: 4px;
     box-shadow: 1px 2px 4px $cloud;
     font-size: 11px;
+    padding: 1rem;
 
     @include tablet{
         font-size: 12px;
